# learning_pydantic

./: main.py  pyproject.toml  requirements.txt
01-foundation/assignments/: product_model_assignement.py
01-foundation/examples/: first_model.py
01-foundation/solutions/: product_model_solution.py
02-fields-validation/assignments/: employee_model_assignment.py
02-fields-validation/examples/: fields_example.py
02-fields-validation/solutions/: employee_model_solution.py
03-model-behaviour/assignments/: task.py
03-model-behaviour/examples/: chai-validator.py
03-model-behaviour/solutions/: solution.py
